Fix terms and conditions spacing in registration

--- a/src/components/RegistrationPage/RulesBlock/RulesBlock.scss
+++ b/src/components/RegistrationPage/RulesBlock/RulesBlock.scss
@@ -2,7 +2,6 @@
 
 .rules-block {
     padding-top: 10px;
-    min-height: 300px;
     &__title {
         font-weight: 400;
     }
@@ -16,7 +15,7 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-        padding: 0px 0px 0 60px !important;
+        padding: 0 0 0 60px !important;
         font-weight: 700;
         font-size: 19px;
         line-height: 24px;
